syntax = "proto3";

package api_core.profile;

service Profile {
    rpc ListRegistries(ListRegistriesRequest) returns (ListRegistriesResponse);
}


message ListRegistriesRequest {
    int64 last_updated_at = 1;
    int32 limit = 2;
}

message ListRegistriesResponse {
    repeated RegistryResource registries = 1;
}


message RegistryResource {
    int64 id = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
    int64 current_pack = 4;
    int32 current_sequence = 5;
    RegistryVariantResource variant = 6;
    string name = 7;
    string image = 8;
}

enum RegistryVariantResource {
    INVALID = 0;
    DIRECT = 1;
}